--- a/caffe-fast-rcnn/Makefile.config
+++ b/caffe-fast-rcnn/Makefile.config
@@ -13,7 +13,7 @@ USE_CUDNN := 0
 
 # CUDA directory contains bin/ and lib/ directories that we need.
 ifneq (, $(wildcard /usr/local/cuda/.))
-	CUDA_DIR := /usr/local/cuda
+	CUDA_DIR := /usr/local/cuda-6.5
 else
 	CUDA_DIR := /nfs/hn22/ashrivas/cv-libs/caffe-deps/cuda-6.5
 endif
